--- a/database/docker-compose.yaml
+++ b/database/docker-compose.yaml
@@ -1,6 +1,4 @@
 version: "3.8"
-env_file:
-	- .env
 services:
 	influxdb:
 		image: influxdb:1.8.10
@@ -11,8 +9,8 @@ services:
 		volumes:
 			- influxdb:/var/lib/influxdb
 		environment:
-			- INFLUXDB_DB=DB
-			- INFLUXDB_ADMIN_USER=ADMIN_USER
-			- INFLUXDB_ADMIN_PASSWORD=ADMIN_PASSWORD
-			- INFLUXDB_USER=USER
-			- INFLUXDB_USER_PASSWORD=USER_PASSWORD
+			- INFLUXDB_DB="${DB}"
+			- INFLUXDB_ADMIN_USER="${ADMIN_USER}"
+			- INFLUXDB_ADMIN_PASSWORD="${ADMIN_PASSWORD}"
+			- INFLUXDB_USER="${USER}"
+			- INFLUXDB_USER_PASSWORD="${USER_PASSWORD}"
