--- a/database/docker-compose.yaml
+++ b/database/docker-compose.yaml
@@ -1,4 +1,6 @@
 version: "3.3"
+volumes:
+  influxdb:
 services:
   influxdb:
     image: influxdb:1.8.10
@@ -7,7 +9,7 @@ services:
     ports:
       - 8086:8086
     volumes:
-      - influxdb:/var/lib/influxdb
+      - influxdb:/var/lib/influxdb:rw
     environment:
       - INFLUXDB_DB="${DB}"
       - INFLUXDB_ADMIN_USER="${ADMIN_USER}"
